--- a/package.json
+++ b/package.json
@@ -9,14 +9,39 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.13",
+    "@heroicons/react": "^2.0.16",
+    "@openzeppelin/contracts": "^4.8.2",
+    "@radix-ui/react-select": "^1.2.1",
+    "@radix-ui/react-toast": "^1.1.3",
+    "@tailwindcss/forms": "^0.5.3",
+    "@thirdweb-dev/react": "^3.10.1",
+    "@thirdweb-dev/sdk": "^3.10.1",
+    "@truffle/hdwallet-provider": "^2.1.7",
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.4",
+    "class-variance-authority": "^0.4.0",
+    "clsx": "^1.2.1",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "ethers": "5",
+    "framer-motion": "^10.2.3",
+    "ipfs-http-client": "56.0.3",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "react-wrap-balancer": "^0.4.0",
+    "tailwind-merge": "^1.10.0",
+    "tailwindcss-animate": "^1.0.5",
+    "truffle": "^5.7.9",
+    "typescript": "4.9.5",
+    "web3": "^1.8.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
